# face-detect-emoji

./: .gitignore  CMakeLists.txt  README.md  affine_transform.cpp  affine_transform.h  image_types.h  index.html  main.cpp
emoji/: convert_code.py
js/: expression_backend.js
model/: inference.py  model_extractor.py  preprocessing.py
wasm/: affine_transform.cpp  affine_transform.h  build.sh  emoji.h  geometry.cpp  main.cpp  predict.cpp  predict.h
